# iceberg_study

./: README.md  main.py  pyproject.toml
app/: config.py  enum.py  main.py
app/converter/btc/: block_converter.py  transaction_converter.py  transaction_input_converter.py  transaction_output_converter.py
app/domain/btc/dto/cq/: block.py  transaction.py  transaction_input.py  transaction_output.py
app/domain/btc/dto/node/: raw_data.py
app/domain/xrpl/model/: __init__.py  db_model.py  ledger_model.py
app/factory/: node_rpc_factory.py
app/fetcher/: __init__.py
app/fetcher/btc/: btc_fetcher.py
app/handler/: iceberg_handler.py
app/loader/: __init__.py
app/loader/iceberg/: firehose_loader.py  iceberg_loader.py
app/loader/kafka/: kafka_loader.py
test/factory/: test_node_rpc_factory.py
test/fetcher/btc/: test_btc_fetcher.py
test/handler/: test_iceberg_handler.py
test/loader/: test_firehose_loader.py  test_iceberg_loader.py  test_kafka_loader.py
test/loader/iceberg/: test_iceberg_loader.py
