[project]
name = "node-processor"
version = "0.1.0"
description = "node ETL processor"
authors = [
    {name = "krails0105",email = "krails.kim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "pyiceberg[daft,duckdb,glue,polars,ray] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
